updated footer on home page to fix spacing, changed content containers to add some color

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ header {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     height: 500px;
+    background-color: #FFA491;
 }
 
 .photography-card,
@@ -47,6 +48,7 @@ header {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     height: 500px;
+    background-color: #FFA491;
 }
 
 .card:hover {
@@ -81,7 +83,7 @@ h1 {
 
 h2 {
     font-size: 24px;
-    font-weight: bold;
+    font-weight: 500;
     text-align: center;
 }
 
@@ -143,7 +145,6 @@ footer {
 }
 
 #footer-year {
-    text-align: left; 
     bottom: 0;
     font-weight: 400;
     padding-left: 20px;
@@ -151,7 +152,7 @@ footer {
 
 footer p {
     text-align: right;
-    padding-right: 10px;
+    padding-right: 20px;
     font-style: italic;
   }
 
